<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="AppName">Bettergram</string>
    <string name="AppNameBeta">Bettergram Beta</string>
    <string name="LanguageName">English</string>
    <string name="English">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="ContinueOnThisLanguage">Continue in English</string>
    <string name="YourPhone">Your phone</string>
    <string name="StartText">Please confirm your country code and enter your phone number.</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="WrongCountry">Invalid Country Code</string>
    <string name="AccountAlreadyLoggedIn">This account is already logged in from this app.</string>
    <string name="AccountSwitch">Switch</string>
    <string name="SyncContacts">Sync Contacts</string>
    <string name="SyncContactsDeleteInfo">This will remove your contacts from the Bettergram servers. If \'Sync
        Contacts\'
        is enabled, contacts will be re-synced.
    </string>
    <string name="SyncContactsOn">Contacts from this device will be added to this account.</string>
    <string name="SyncContactsOff">Contacts from this device will not be added to this account.</string>
    <string name="SyncContactsInfoOn">Contacts from this device will be added to your account.</string>
    <string name="SyncContactsInfoOff">Turn on to import contacts from this device to your account.</string>
    <string name="SyncContactsAdded">Contacts from this device were added to your account.</string>
    <string name="YourCode">Phone verification</string>
    <string name="SentSmsCode">We\'ve sent an SMS with an activation code to your phone **%1$s**.</string>
    <string name="SentAppCode">We\'ve sent the code to the **Bettergram** app on your other device.</string>
    <string name="SentCallCode">We\'re calling your phone **%1$s**.\n\nDon\'t accept the call, Bettergram will process
        everything automatically.
    </string>
    <string name="SentCallOnly">We are calling your phone **%1$s** to dictate a code.</string>
    <string name="CallText">Bettergram will call you in %1$d:%2$02d</string>
    <string name="SmsText">We will send you an SMS in %1$d:%2$02d</string>
    <string name="Calling" tools:ignore="TypographyEllipsis">Calling you...</string>
    <string name="Code">Code</string>
    <string name="WrongNumber">Wrong number?</string>
    <string name="DidNotGetTheCode">Didn\'t get the code?</string>
    <string name="CancelAccountReset">Cancel account reset</string>
    <string name="CancelAccountResetInfo">Somebody with access to your phone number **%1$s** has requested to delete
        your Bettergram account and reset your 2-Step Verification password.\n\nIf this wasn\'t you, please enter the
        code
        we\'ve just sent you via SMS to your number.
    </string>
    <string name="ResetAccount">Reset account</string>
    <string name="ResetAccountInfo">Since the account **%1$s** is active and protected by a password, we will delete it
        in 1 week for security purposes.\n\nYou can cancel this process at any time.
    </string>
    <string name="ResetAccountStatus">You\'ll be able to reset your account in:</string>
    <string name="ResetAccountCancelledAlert">Your recent attempts to reset this account have been cancelled by its
        active user. Please try again in 7 days.
    </string>
    <string name="ResetAccountButton">RESET ACCOUNT</string>
    <string name="CancelLinkExpired">Link is invalid or expired.</string>
    <string name="CancelLinkSuccess">The deletion process was cancelled for your account %1$s. You may close this window
        now.
    </string>
    <string name="YourName">Your name</string>
    <string name="RegisterText">Set up your first and last name</string>
    <string name="FirstName">First name (required)</string>
    <string name="LastName">Last name (optional)</string>
    <string name="CancelRegistration">Cancel registration</string>
    <string name="PaymentSuccessfullyPaid">You have just successfully transferred %1$s to %2$s for %3$s</string>
    <string name="PaymentSuccessfullyPaidNoItem">You have just successfully transferred %1$s to %2$s</string>
    <string name="PaymentCheckout">Checkout</string>
    <string name="PaymentShippingMethod">Shipping methods</string>
    <string name="PaymentNoShippingMethod">Sorry, it is not possible to deliver to your address.</string>
    <string name="PaymentShippingInfo">Shipping information</string>
    <string name="PaymentShippingAddress">Shipping address</string>
    <string name="PaymentShippingAddress1Placeholder">Address 1 (Street)</string>
    <string name="PaymentShippingAddress2Placeholder">Address 2 (Street)</string>
    <string name="PaymentShippingCityPlaceholder">City</string>
    <string name="PaymentShippingStatePlaceholder">State</string>
    <string name="PaymentShippingCountry">Country</string>
    <string name="PaymentShippingZipPlaceholder">Postcode</string>
    <string name="PaymentShippingReceiver">Receiver</string>
    <string name="PaymentShippingName">Full Name</string>
    <string name="PaymentShippingPhoneNumber">Phone Number</string>
    <string name="PaymentShippingEmailPlaceholder">E-Mail</string>
    <string name="PaymentShippingSave">Save Shipping Information</string>
    <string name="PaymentShippingSaveInfo">You can save your shipping info for future use.</string>
    <string name="PaymentCardInfo">Payment info</string>
    <string name="PaymentCardTitle">Payment card</string>
    <string name="PaymentCardNumber">Card Number</string>
    <string name="PaymentCardCvv">Security Code (CVV)</string>
    <string name="PaymentCardExpireDate">MM/YY</string>
    <string name="PaymentBillingAddress">Billing address</string>
    <string name="PaymentCardName">Name Surname</string>
    <string name="PaymentCardSavePaymentInformation">Save Payment Information</string>
    <string name="PaymentCardSavePaymentInformationInfoLine1">You can save your payment info for future use.</string>
    <string name="PaymentCardSavePaymentInformationInfoLine2">Please *turn on Two-Step Verification* to enable this.
    </string>
    <string name="PaymentTransactionReview">Transaction Review</string>
    <string name="PaymentTransactionMessage">Do you really want to transfer %1$s to the %2$s bot for %3$s?</string>
    <string name="PaymentTransactionTotal">Total</string>
    <string name="PaymentInvoice">INVOICE</string>
    <string name="PaymentTestInvoice">TEST INVOICE</string>
    <string name="PaymentCheckoutPay">PAY %1$s</string>
    <string name="PaymentCheckoutMethod">Payment method</string>
    <string name="PaymentCheckoutProvider">Payment provider</string>
    <string name="PaymentCheckoutName">Name</string>
    <string name="PaymentCheckoutPhoneNumber">Phone number</string>
    <string name="PaymentCheckoutEmail">Contact address</string>
    <string name="PaymentCheckoutShippingMethod">Shipping method</string>
    <string name="PaymentReceipt">Receipt</string>
    <string name="PaymentConfirmationNewCard">Choose a different card</string>
    <string name="PaymentConfirmationMessage">Your card %1$s is on file. To pay with this card, please enter your
        2-Step-Verification password.
    </string>
    <string name="PaymentPrecheckoutFailed">Sorry, the payment was cancelled by the bot.</string>
    <string name="PaymentFailed">Sorry, the payment was declined.</string>
    <string name="PaymentConnectionFailed">Unable to reach payment server. Please check your internet connection and try
        again.
    </string>
    <string name="PaymentWarning">Warning</string>
    <string name="PaymentWarningText">Neither Bettergram, nor %1$s will have access to your credit card information.
        Credit card details will be handled only by the payment system, %2$s.\n\nPayments will go directly to the
        developer of %1$s. Bettergram cannot provide any guarantees, so proceed at your own risk. In case of problems,
        please contact the developer of %1$s or your bank.
    </string>
    <string name="PaymentPassword">Password &amp; E-Mail</string>
    <string name="PaymentPasswordTitle">Password</string>
    <string name="PaymentPasswordEnter">Enter a password</string>
    <string name="PaymentPasswordReEnter">Re-enter your password</string>
    <string name="PaymentPasswordInfo">Please create a password to protect your payment info. You\'ll be asked to enter
        it when you log in.
    </string>
    <string name="PaymentPasswordEmailTitle">Recovery E-Mail</string>
    <string name="PaymentPasswordEmail">Your E-Mail</string>
    <string name="PaymentPasswordEmailInfo">Please add your valid e-mail. It is the only way to recover a forgotten
        password.
    </string>
    <string name="PaymentPhoneToProvider">Phone will be passed to %1$s as billing info.</string>
    <string name="PaymentEmailToProvider">E-Mail will be passed to %1$s as billing info.</string>
    <string name="PaymentPhoneEmailToProvider">Phone and E-Mail will be passed to %1$s as billing info.</string>
    <string name="NewConversationShortcut">New conversation</string>
    <string name="Settings">Settings</string>
    <string name="Contacts">Contacts</string>
    <string name="NewGroup">New Group</string>
    <string name="Yesterday">yesterday</string>
    <string name="NoResult">No results</string>
    <string name="NoChats">No chats yet...</string>
    <string name="RecentlyViewed">Recently viewed</string>
    <string name="RecentlyViewedHide">HIDE</string>
    <string name="NoChatsHelp">Start messaging by pressing the\nnew message button in the bottom right corner\nor tap
        the menu button for more options.
    </string>
    <string name="NoChatsContactsHelp">Start messaging by pressing the\nnew message button in the bottom right
        corner\nor tap the menu button for more options.
    </string>
    <string name="WaitingForNetwork">Waiting for network...</string>
    <string name="Connecting">Connecting...</string>
    <string name="Connected">Connected</string>
    <string name="Ping">Ping: %1$d ms</string>
    <string name="Checking">Checking...</string>
    <string name="Available">Available</string>
    <string name="Unavailable">Unavailable</string>
    <string name="ConnectingToProxy">Connecting to proxy</string>
    <string name="ConnectingConnectProxy">Connect Proxy</string>
    <string name="Updating">Updating...</string>
    <string name="NewSecretChat">New Secret Chat</string>
    <string name="AwaitingEncryption">Waiting for %s to get online...</string>
    <string name="EncryptionRejected">Secret chat cancelled</string>
    <string name="EncryptionProcessing">Exchanging encryption keys...</string>
    <string name="EncryptedChatStartedOutgoing">%s joined your secret chat.</string>
    <string name="EncryptedChatStartedIncoming">You joined the secret chat.</string>
    <string name="ClearHistory">Clear history</string>
    <string name="ClearHistoryCache">Delete from cache</string>
    <string name="DeleteChat">Delete and exit</string>
    <string name="DeleteChatUser">Delete chat</string>
    <string name="HiddenName">Deleted Account</string>
    <string name="SelectChat">Select Chat</string>
    <string name="ForwardTo">Forward to...</string>
    <string name="DisappearingPhoto">Secret Photo</string>
    <string name="DisappearingVideo">Secret Video</string>
    <string name="coin">COIN</string>
    <string name="price">PRICE</string>
    <string name="_24h">24H</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree_to_the_terms">I agree to the terms of service</string>
    <string name="free_crypto_newsletter">Get our free crypto newsletter</string>
    <string name="you_must_accept_terms">* You must accept terms to use Bettergram</string>
</resources>