<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:background="@null"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/textCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.45"
        android:gravity="center"
        android:text="@string/coin"
        android:textColor="@color/grey3d"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/grey3d"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text24H"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.30"
        android:gravity="center"
        android:text="@string/_24h"
        android:textColor="@color/grey3d"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>